[fix] problem that texts are shifted down on saved image

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -18,3 +18,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+.fix-shift p {
+    position:relative;
+    top:-10px;
+}
